# dev-docs

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  package.json
.playwright-mcp/: page-2026-06-05T19-47-26-719Z.yml  page-2026-06-05T19-49-57-055Z.yml  page-2026-06-05T19-50-13-510Z.yml  page-2026-06-05T19-50-17-388Z.yml  page-2026-06-05T19-50-22-054Z.yml  page-2026-06-05T19-52-54-609Z.yml  page-2026-06-05T19-53-57-081Z.yml  page-2026-06-05T19-54-01-509Z.yml  page-2026-06-05T19-54-05-891Z.yml  page-2026-06-05T19-57-35-459Z.yml
dev-docs/: .gitignore  package-lock.json  package.json  tailwind.config.js
dev-docs/src/: App.tsx  index.css
dev-docs/src-python/: main.py  pyproject.toml  start-sidecar
dev-docs/src-python/routers/: chat.py  index_repo.py  search.py
dev-docs/src-python/services/: openrouter.py  rag.py
dev-docs/src-tauri/: Cargo.toml  tauri.conf.json
dev-docs/src-tauri/src/: lib.rs  main.rs
dev-docs/src/lib/: api.ts  settings.ts  sidecar.ts
dev-docs/src/screens/: ChatScreen.tsx  ReposScreen.tsx  SettingsScreen.tsx
dev-docs/src/store/: chatStore.ts
dev/dev-docs-design-system/: README.md
dev/dev-docs-design-system/project/: SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
dev/plans/: README.md  active-plan.md  master-plan.md
dev/plans/_templates/: nnn.md
dev/plans/d-plns/: README.md
dev/plans/p-plns/: README.md
dev/plans/r-plns/: README.md
dev/roadmap/: README.md  dev-map.md  roadmap.md
holeshot/: ANALYSIS.md  ARCHITECTURAL_PIVOT.md  PATHWAY.md  SPEC_AGENTIC_WORKFLOW.md
(+149 files in other folders)
