[project]
name = "plan-builder-sidecar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "llama-index>=0.10.0",
  "llama-index-vector-stores-chroma>=0.1.0",
  "chromadb>=0.5.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "websockets>=12.0",
  "pydantic>=2.0.0",
]
